--- a/index.css
+++ b/index.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Pacifico&display=swap');
+
 body {
   margin: 0;
+}
+
+.aniversaries-font-inter {
+  font-family: 'Inter', sans-serif;
+}
+
+.aniversaries-font-cursive {
+  font-family: 'Pacifico', cursive;
 }
 
 .custom-scrollbar {
